--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-  "name": "wpscholar/github-archive-installer",
-  "description": "A custom Composer installer that will install a dependency from a GitHub release archive .zip file when installing from distribution.",
+  "name": "inwerpsel/github-archive-installer",
+  "description": "Forked from https://github.com/wpscholar/github-archive-installer. A custom Composer installer that will install a dependency from a GitHub release archive .zip file when installing from distribution.",
   "type": "composer-plugin",
   "license": "GPL-2.0-or-later",
   "authors": [
     {
-      "name": "Micah Wood",
-      "email": "micah@wpscholar.com"
+      "name": "inwerpsel",
+      "email": "inwerpsel@gmail.com"
     }
   ],
   "require": {
